@@ -146,6 +146,10 @@ public final class Float16
      */
     public static final Float16 NaN = valueOf(Float.NaN);
 
+    private static final Float16 ZERO = valueOf(0);
+
+    private static final Float16 ONE  = valueOf(1);
+
     /**
      * A constant holding the largest positive finite value of type
      * {@code Float16},
@@ -221,6 +225,16 @@ public final class Float16
      * @see Double#BYTES
      */
     public static final int BYTES = SIZE / Byte.SIZE;
+
+    /**
+     * The overflow threshold (for round to nearest) is MAX_VALUE + 1/2 ulp.
+     */
+    private static final double OVERFLOW_THRESH = 0x1.ffcp15 + 0x0.002p15;
+
+    /**
+     * The underflow threshold (for round to nearest) is MIN_VALUE * 0.5.
+     */
+    private static final double UNDERFLOW_THRESH = 0x1.0p-24d * 0.5d;
 
     /**
      * Returns a string representation of the {@code Float16}
@@ -340,51 +354,51 @@ public final class Float16
     * @param  d a {@code double}
     */
     public static Float16 valueOf(double d) {
-        long doppel = Double.doubleToRawLongBits(d);
-
-        short sign_bit = (short)((doppel & 0x8000_0000_0000_0000L) >> 48);
-
         if (Double.isNaN(d)) {
             // Have existing float code handle any attempts to
             // preserve NaN bits.
             return valueOf((float)d);
         }
 
+        long doppel = Double.doubleToRawLongBits(d);
+        short sign_bit = (short)((doppel & 0x8000_0000_0000_0000L) >> (64 - 16));
         double abs_d = Math.abs(d);
 
-        // The overflow threshold is binary16 MAX_VALUE + 1/2 ulp
-        if (abs_d >= (0x1.ffcp15 + 0x0.002p15) ) {
+        if (abs_d >= OVERFLOW_THRESH) {
              // correctly signed infinity
             return new Float16((short)(sign_bit | 0x7c00));
         }
 
-        // Smallest magnitude nonzero representable binary16 value
-        // is equal to 0x1.0p-24; half-way and smaller rounds to zero.
-        if (abs_d <= 0x1.0p-24d * 0.5d) { // Covers double zeros and subnormals.
-            return new Float16(sign_bit); // Positive or negative zero
+        if (abs_d <= UNDERFLOW_THRESH) { // Covers double zeros and subnormals.
+            // positive or negative zero
+            return new Float16(sign_bit);
         }
 
         // Dealing with finite values in exponent range of binary16
         // (when rounding is done, could still round up)
         int exp = Math.getExponent(d);
-        assert -25 <= exp && exp <= 15;
+        assert
+            (MIN_EXPONENT - PRECISION) <= exp &&
+            exp <= MAX_EXPONENT;
 
-        // For binary16 subnormals, beside forcing exp to -15, retain
-        // the difference expdelta = E_min - exp.  This is the excess
-        // shift value, in addition to 42, to be used in the
+        // For target format subnormals, beside forcing exp to
+        // MIN_EXPONENT-1, retain the difference expdelta = E_min -
+        // exp.  This is the excess shift value, in addition to the
+        // difference in precision bits, to be used in the
         // computations below.  Further the (hidden) msb with value 1
         // in d must be involved as well.
         int expdelta = 0;
         long msb = 0x0000_0000_0000_0000L;
-        if (exp < -14) {
-            expdelta = -14 - exp; // FIXME?
-            exp = -15;
-            msb = 0x0010_0000_0000_0000L; // should be 0x0020_... ?
+        if (exp < MIN_EXPONENT) {
+            expdelta = MIN_EXPONENT - exp;
+            exp = MIN_EXPONENT - 1;
+            msb = 0x0010_0000_0000_0000L;
         }
         long f_signif_bits = doppel & 0x000f_ffff_ffff_ffffL | msb;
 
+        int PRECISION_DIFF = Double.PRECISION - PRECISION; // 42
         // Significand bits as if using rounding to zero (truncation).
-        short signif_bits = (short)(f_signif_bits >> (42 + expdelta));
+        short signif_bits = (short)(f_signif_bits >> (PRECISION_DIFF + expdelta));
 
         // For round to nearest even, determining whether or not to
         // round up (in magnitude) is a function of the least
@@ -399,9 +413,9 @@ public final class Float16
         // 1    1     1
         // See "Computer Arithmetic Algorithms," Koren, Table 4.9
 
-        long lsb    = f_signif_bits & (1L << 42 + expdelta);
-        long round  = f_signif_bits & (1L << 41 + expdelta);
-        long sticky = f_signif_bits & ((1L << 41 + expdelta) - 1);
+        long lsb    = f_signif_bits &  (1L << (PRECISION_DIFF      + expdelta));
+        long round  = f_signif_bits &  (1L << (PRECISION_DIFF - 1) + expdelta);
+        long sticky = f_signif_bits & ((1L << (PRECISION_DIFF - 1) + expdelta) - 1);
 
         if (round != 0 && ((lsb | sticky) != 0 )) {
             signif_bits++;
@@ -412,7 +426,9 @@ public final class Float16
         // to implement a carry out from rounding the significand.
         assert (0xf800 & signif_bits) == 0x0;
 
-        return new Float16((short)(sign_bit | ( ((exp + 15) << 10) + signif_bits ) ));
+        // Exponent bias adjust in the representation is equal to MAX_EXPONENT.
+        return new Float16((short)(sign_bit |
+                                   ( ((exp + MAX_EXPONENT) << (PRECISION - 1)) + signif_bits ) ));
     }
 
     /**
@@ -600,7 +616,7 @@ public final class Float16
          * Float16}.
          */
         private static final Float16[] FLOAT16_10_POW = {
-            Float16.valueOf(1), Float16.valueOf(10), Float16.valueOf(100),
+            Float16.ONE, Float16.valueOf(10), Float16.valueOf(100),
             Float16.valueOf(1_000), Float16.valueOf(10_000)
         };
 
@@ -637,14 +653,14 @@ public final class Float16
 
         private static Float16 fullFloat16Value(BigDecimal bd) {
             if (BigDecimal.ZERO.compareTo(bd) == 0) {
-                return Float16.valueOf(0);
+                return ZERO;
             }
             BigInteger w = bd.unscaledValue().abs();
             int scale = bd.scale();
             long qb = w.bitLength() - (long) Math.ceil(scale * L);
             Float16 signum = Float16.valueOf(bd.signum());
             if (qb < Q_MIN_F16 - 2) {  // qb < -26
-                return Float16.multiply(signum, Float16.valueOf(0));
+                return Float16.multiply(signum, ZERO);
             }
             if (qb > Q_MAX_F16 + P_F16 + 1) {  // qb > 17
                 return Float16.multiply(signum, Float16.POSITIVE_INFINITY);
@@ -717,7 +733,7 @@ public final class Float16
     public static boolean isNaN(Float16 f16) {
         final short bits = float16ToRawShortBits(f16);
         // A NaN value has all ones in its exponent and a non-zero significand
-        return ((bits & 0x7c00) == 0x7c00 && (bits & 0x03ff) != 0);
+        return ((bits & EXP_BIT_MASK) == EXP_BIT_MASK && (bits & SIGNIF_BIT_MASK) != 0);
     }
 
     /**
@@ -736,8 +752,9 @@ public final class Float16
      * @see Double#isInfinite(double)
      */
     public static boolean isInfinite(Float16 f16) {
-        return ((float16ToRawShortBits(f16) ^
-                 float16ToRawShortBits(POSITIVE_INFINITY)) & 0x7fff) == 0;
+        final short bits = float16ToRawShortBits(f16);
+        // An infinite value has all ones in its exponent and a zero significand
+        return ((bits & EXP_BIT_MASK) == EXP_BIT_MASK && (bits & SIGNIF_BIT_MASK) == 0);
     }
 
     /**
@@ -757,7 +774,7 @@ public final class Float16
      * @see Double#isFinite(double)
      */
     public static boolean isFinite(Float16 f16) {
-        return (float16ToRawShortBits(f16) & (short)0x0000_7FFF) <=
+        return (float16ToRawShortBits(f16) & (EXP_BIT_MASK | SIGNIF_BIT_MASK)) <=
             float16ToRawShortBits(MAX_VALUE);
      }
 
@@ -1551,7 +1568,7 @@ public final class Float16
             assert exp <= MAX_EXPONENT && exp >= MIN_EXPONENT;
             // ulp(x) is usually 2^(SIGNIFICAND_WIDTH-1)*(2^ilogb(x))
             // Let float -> float16 conversion handle encoding issues.
-            yield scalb(valueOf(1), exp - (PRECISION - 1));
+            yield scalb(ONE, exp - (PRECISION - 1));
         }
         };
     }
@@ -1673,7 +1690,7 @@ public final class Float16
                 Float16Consts.SIGNIFICAND_WIDTH + 1;
 
         // Make sure scaling factor is in a reasonable range
-        scaleFactor = Math.max(Math.min(scaleFactor, MAX_SCALE), -MAX_SCALE);
+        scaleFactor = Math.clamp(scaleFactor, -MAX_SCALE, MAX_SCALE);
 
         int DoubleConsts_EXP_BIAS = 1023;
         /*
@@ -1731,7 +1748,7 @@ public final class Float16
      * @see Math#signum(double)
      */
     public static Float16 signum(Float16 f) {
-        return (f.floatValue() == 0.0f || isNaN(f)) ? f : copySign(valueOf(1), f);
+        return (f.floatValue() == 0.0f || isNaN(f)) ? f : copySign(ONE, f);
     }
 
     // TODO: Temporary location for this functionality while Float16
